Fix ul/li spacing and align search form components

--- a/ckanext/dia_theme/less/dia_custom.less
+++ b/ckanext/dia_theme/less/dia_custom.less
@@ -1208,3 +1208,13 @@ input[type='text'], input[type='password'], input[type='date'], input[type='date
   border-radius: 1.5em 1.5em 0 0;
   border-bottom: none;
 }
+body ul {
+  line-height: 1;
+  padding-left: 0;
+}
+body li {
+  padding-left: 0;
+}
+#dataset-search-form {
+  display: block;
+}
