--- a/ckanext/dia_theme/less/search.less
+++ b/ckanext/dia_theme/less/search.less
@@ -1,8 +1,8 @@
 .search-form {
   // .clearfix;
-  margin-bottom: 0;
-  padding-bottom: 0;
-  border-bottom: none;
+  margin-bottom: 20px;
+  padding-bottom: 25px;
+  border-bottom: 1px dotted @genericBorderColor;
 
   // Normal search box
   .search-input {
@@ -53,7 +53,7 @@
     }
   }
   .control-order-by {
-    margin-top: 10px;
+    margin-top: 5px;
 
     label,
     select {
@@ -194,11 +194,6 @@ a.dataset-request {
 .site-search__visibility.hidden {
   display: block;
   visibility: visible;
-}
-.search-form-wrap {
-  margin-bottom: 20px;
-  padding-bottom: 25px;
-  border-bottom: 1px dotted @genericBorderColor;
 }
 /* this should be pulled back to rua to fix on parent site too */
 .search-toggle__search {
